--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@ input[type="text"], select{width:100%;padding:10px;border-radius:8px;border:1px 
           <div class="result-hero">
             <div class="ring"><div class="score" id="scoreVal">0</div></div>
             <div>
+              <div id="resultHeader" style="margin-bottom:6px">
+                <div style="font-weight:700" id="bizTitle">Business name</div>
+                <div class="note" id="bizMeta">Category — Area</div>
+              </div>
               <div style="font-weight:700" id="scoreLabel">Low visibility</div>
               <div class="note" id="scoreNote">Your business is hard to find on Google.</div>
             </div>
@@ -378,6 +382,10 @@ function runCheck(){
   document.getElementById('mapsVis').textContent = score >= 55 ? 'Visible' : (score >= 30 ? 'Partially visible' : 'Hidden');
   document.getElementById('trustSignals').textContent = trustSignals;
 
+  // Set the business heading/meta in the result card
+  document.getElementById('bizTitle').textContent = name;
+  document.getElementById('bizMeta').textContent = `${category}${area ? ' — ' + area : ''}`;
+
   // fill issues + recs in UI
   const issuesEl = document.getElementById('issuesList');
   const recEl = document.getElementById('recoList');
@@ -432,4 +440,4 @@ function runCheck(){
 /* init: make some chips active by default? (no) */
 </script>
 </body>
-                </html>
+            </html>
